--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sass-embedded": "^1.83.4",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
